crates/compiler/tests/parse_errors/record_accessor.txt
-- EXPECTING RECORD ACCESSOR -------------------------------------- src/Main.elm

I am trying to parse a record accessor here:

2| x = .
        ^
Something like .name or .price that accesses a value from a record.

Note: Record field names must start with a lower case letter!

